// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tool-helpers @ en-US > courseContentToText 1`] = `
"### Course content

- **Módulo 1: Límites**
  - Introducción a límites _[File]_ (id=101)"
`;

exports[`tool-helpers @ en-US > coursesToCompact 1`] = `
"### You have 2 courses:

- **Cálculo I** (id=1) — MATE-1101
- **Programación** (id=2) — ISIS-1221 _[inactive]_"
`;

exports[`tool-helpers @ en-US > coursesToDetailed 1`] = `
"### Courses

| Course | Code | Status |
|---|---|---|
| Cálculo I (id=1) | MATE-1101 |  |
| Programación (id=2) | ISIS-1221 | inactive |"
`;

exports[`tool-helpers @ en-US > discussionsToText 1`] = `
"### Discussion forums

#### Foro general
- Preguntas del parcial (5 posts, last May 10, 2026)"
`;

exports[`tool-helpers @ en-US > emailsToText 1`] = `"student1@uni.edu, student2@uni.edu"`;

exports[`tool-helpers @ en-US > feedbackToText 1`] = `
"#### Feedback

17/20 (85.0%)
Released: Apr 15, 2026

> Buen trabajo, pero revisar los límites laterales."
`;

exports[`tool-helpers @ en-US > gradesToCompact 1`] = `
"### Grades

- **Quiz 1**: 85.5% (B)
- **Lab 2**: ungraded"
`;

exports[`tool-helpers @ en-US > gradesToDetailed 1`] = `
"### Grades

| Item | Score | % | Letter |
|---|---|---|---|
| Quiz 1 | 17/20 | 85.5% | B |
| Lab 2 | — | ungraded |  |"
`;

exports[`tool-helpers @ en-US > rosterToText 1`] = `
"### 2 classmates

- **Ana García** _[Student]_ · ana@uni.edu
- **Prof. Rodríguez** _[Instructor]_"
`;

exports[`tool-helpers @ en-US > syllabusToText 1`] = `
"### Programa del curso MATE-1101

_Updated: Jan 10, 2026_

Este curso cubre cálculo diferencial e integral."
`;

exports[`tool-helpers @ es-419 > courseContentToText 1`] = `
"### Contenido del curso

- **Módulo 1: Límites**
  - Introducción a límites _[File]_ (id=101)"
`;

exports[`tool-helpers @ es-419 > coursesToCompact 1`] = `
"### Tienes 2 cursos:

- **Cálculo I** (id=1) — MATE-1101
- **Programación** (id=2) — ISIS-1221 _[inactivo]_"
`;

exports[`tool-helpers @ es-419 > coursesToDetailed 1`] = `
"### Cursos

| Curso | Código | Estado |
|---|---|---|
| Cálculo I (id=1) | MATE-1101 |  |
| Programación (id=2) | ISIS-1221 | inactivo |"
`;

exports[`tool-helpers @ es-419 > discussionsToText 1`] = `
"### Foros de discusión

#### Foro general
- Preguntas del parcial (5 publicaciones, última el 10 may 2026)"
`;

exports[`tool-helpers @ es-419 > emailsToText 1`] = `"student1@uni.edu, student2@uni.edu"`;

exports[`tool-helpers @ es-419 > feedbackToText 1`] = `
"#### Retroalimentación

17/20 (85.0%)
Publicada: 15 abr 2026

> Buen trabajo, pero revisar los límites laterales."
`;

exports[`tool-helpers @ es-419 > gradesToCompact 1`] = `
"### Calificaciones

- **Quiz 1**: 85.5% (B)
- **Lab 2**: sin calificar"
`;

exports[`tool-helpers @ es-419 > gradesToDetailed 1`] = `
"### Calificaciones

| Elemento | Puntaje | % | Letra |
|---|---|---|---|
| Quiz 1 | 17/20 | 85.5% | B |
| Lab 2 | — | sin calificar |  |"
`;

exports[`tool-helpers @ es-419 > rosterToText 1`] = `
"### 2 compañeros

- **Ana García** _[Student]_ · ana@uni.edu
- **Prof. Rodríguez** _[Instructor]_"
`;

exports[`tool-helpers @ es-419 > syllabusToText 1`] = `
"### Programa del curso MATE-1101

_Actualizado: 10 ene 2026_

Este curso cubre cálculo diferencial e integral."
`;

exports[`tool-helpers @ fr-CA > courseContentToText 1`] = `
"### Contenu du cours

- **Módulo 1: Límites**
  - Introducción a límites _[File]_ (id=101)"
`;

exports[`tool-helpers @ fr-CA > coursesToCompact 1`] = `
"### Vous avez 2 cours :

- **Cálculo I** (id=1) — MATE-1101
- **Programación** (id=2) — ISIS-1221 _[inactif]_"
`;

exports[`tool-helpers @ fr-CA > coursesToDetailed 1`] = `
"### Cours

| Cours | Code | Statut |
|---|---|---|
| Cálculo I (id=1) | MATE-1101 |  |
| Programación (id=2) | ISIS-1221 | inactif |"
`;

exports[`tool-helpers @ fr-CA > discussionsToText 1`] = `
"### Forums de discussion

#### Foro general
- Preguntas del parcial (5 messages, dernier le 10 mai 2026)"
`;

exports[`tool-helpers @ fr-CA > emailsToText 1`] = `"student1@uni.edu, student2@uni.edu"`;

exports[`tool-helpers @ fr-CA > feedbackToText 1`] = `
"#### Rétroaction

17/20 (85,0%)
Publiée : 15 avr. 2026

> Buen trabajo, pero revisar los límites laterales."
`;

exports[`tool-helpers @ fr-CA > gradesToCompact 1`] = `
"### Notes

- **Quiz 1**: 85,5% (B)
- **Lab 2**: non noté"
`;

exports[`tool-helpers @ fr-CA > gradesToDetailed 1`] = `
"### Notes

| Élément | Score | % | Lettre |
|---|---|---|---|
| Quiz 1 | 17/20 | 85,5% | B |
| Lab 2 | — | non noté |  |"
`;

exports[`tool-helpers @ fr-CA > rosterToText 1`] = `
"### 2 camarades

- **Ana García** _[Student]_ · ana@uni.edu
- **Prof. Rodríguez** _[Instructor]_"
`;

exports[`tool-helpers @ fr-CA > syllabusToText 1`] = `
"### Programa del curso MATE-1101

_Mis à jour : 10 janv. 2026_

Este curso cubre cálculo diferencial e integral."
`;

exports[`tool-helpers @ pt-BR > courseContentToText 1`] = `
"### Conteúdo do curso

- **Módulo 1: Límites**
  - Introducción a límites _[File]_ (id=101)"
`;

exports[`tool-helpers @ pt-BR > coursesToCompact 1`] = `
"### Você tem 2 cursos:

- **Cálculo I** (id=1) — MATE-1101
- **Programación** (id=2) — ISIS-1221 _[inativo]_"
`;

exports[`tool-helpers @ pt-BR > coursesToDetailed 1`] = `
"### Cursos

| Curso | Código | Status |
|---|---|---|
| Cálculo I (id=1) | MATE-1101 |  |
| Programación (id=2) | ISIS-1221 | inativo |"
`;

exports[`tool-helpers @ pt-BR > discussionsToText 1`] = `
"### Fóruns de discussão

#### Foro general
- Preguntas del parcial (5 publicações, última em 10 de mai. de 2026)"
`;

exports[`tool-helpers @ pt-BR > emailsToText 1`] = `"student1@uni.edu, student2@uni.edu"`;

exports[`tool-helpers @ pt-BR > feedbackToText 1`] = `
"#### Feedback

17/20 (85,0%)
Publicado: 15 de abr. de 2026

> Buen trabajo, pero revisar los límites laterales."
`;

exports[`tool-helpers @ pt-BR > gradesToCompact 1`] = `
"### Notas

- **Quiz 1**: 85,5% (B)
- **Lab 2**: sem nota"
`;

exports[`tool-helpers @ pt-BR > gradesToDetailed 1`] = `
"### Notas

| Item | Pontuação | % | Letra |
|---|---|---|---|
| Quiz 1 | 17/20 | 85,5% | B |
| Lab 2 | — | sem nota |  |"
`;

exports[`tool-helpers @ pt-BR > rosterToText 1`] = `
"### 2 colegas

- **Ana García** _[Student]_ · ana@uni.edu
- **Prof. Rodríguez** _[Instructor]_"
`;

exports[`tool-helpers @ pt-BR > syllabusToText 1`] = `
"### Programa del curso MATE-1101

_Atualizado: 10 de jan. de 2026_

Este curso cubre cálculo diferencial e integral."
`;
